infra/k8s/event-bus-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: iuliancarnaru/event-bus
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-service
spec:
  selector:
    app: event-bus
  ports:
    - port: 4005
      targetPort: 4005
