infra/k8s/query-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-deployment
spec:
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: iuliancarnaru/query
---
apiVersion: v1
kind: Service
metadata:
  name: query-clusterip-service
spec:
  selector:
    app: query
  ports:
    - port: 4002
      targetPort: 4002
