infra/k8s/ingress-controller.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controller
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: posts.com
      http:
        paths:
          - pathType: Prefix
            path: '/posts/create'
            backend:
              service:
                name: posts-clusterip-service
                port:
                  number: 4000
          - pathType: Prefix
            path: '/posts'
            backend:
              service:
                name: query-clusterip-service
                port:
                  number: 4002
          - pathType: Prefix
            path: '/posts/?(.*)/comments'
            backend:
              service:
                name: comments-clusterip-service
                port:
                  number: 4001
          - pathType: Prefix
            path: '/?(.*)'
            backend:
              service:
                name: client-clusterip-service
                port:
                  number: 5173
